# amr_ws

./: README.md
robot_client/: CMakeLists.txt  package.xml
robot_client/include/robot_client/: DataStructures.h  DeviceManager.h
robot_client/include/robot_client/communication/: common.h
robot_client/include/robot_client/drivers/: MotorClient.h
robot_client/include/robot_client/drivers/MoonsMotor/: moonsMotor.h
robot_client/include/robot_client/drivers/kincoMotor/: KincoMotor.h
robot_client/include/robot_client/kinematics/DifferentialDrive/: DifferentialDrive.h
robot_client/include/robot_client/kinematics/TricycleDrive/: TricycleDrive.h
robot_client/include/robot_client/utils/: xmlParser.h
robot_client/launch/: kinco_client.launch
robot_client/src/: DeviceManager.cpp  mainWrapper.cpp
robot_client/src/communication/: client.cpp
robot_client/src/drivers/MoonsMotor/: MoonsMotor.cpp
robot_client/src/drivers/kincoMotor/: KincoMotor.cpp
robot_client/src/kinematics/DifferentialDrive/: DifferentialDrive.cpp
robot_client/src/kinematics/TricycleDrive/: TricycleDrive.cpp
robot_client/src/utils/: xmlParser.cpp
